# ietf-rag

./: .gitignore  LICENSE  README.md  USAGE.md  crawl4ai.txt  pyproject.toml  requirements.txt
src/: main.py
src/data_ingestion/: crawler.py  rfc_xml_parser.py
src/knowledge_base/: graph_store.py  vector_store.py
src/qa_system/: protocol_compiler.py  protocol_ir.py  rag_pipeline.py
src/utils/: model_downloader.py
