[project]
name = "ietf-rag"
version = "0.1.0"
description = "IETF Networking Standards RAG System"
authors = [
    { name = "asrirang" }
]
dependencies = [
    "crawl4ai",
    "requests",
    "ragflow",
    "chromadb",
    "sentence-transformers",
    "python-dotenv",
    "tqdm",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.11",
    "rank-bm25>=0.2.2",
    "flashrank>=0.2.10",
    "langgraph>=1.1.2",
    "networkx>=3.4.2",
    "bs4>=0.0.2",
    "lxml>=5.4.0",
    "jsonschema>=4.26.0",
    "rich>=14.3.3",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest",
]
